--- a/.github/workflows/iso_build.yml
+++ b/.github/workflows/iso_build.yml
@@ -1,4 +1,9 @@
 name: iso_build
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   prepare-release:
     runs-on: ubuntu-20.04
