on: workflow_dispatch

--- a/.github/workflows/iso_build.yml
+++ b/.github/workflows/iso_build.yml
@@ -1,9 +1,5 @@
 name: iso_build
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: workflow_dispatch
 jobs:
   prepare-release:
     runs-on: ubuntu-20.04
