change edition to gnome-vanilla

--- a/.github/workflows/iso_build.yml
+++ b/.github/workflows/iso_build.yml
@@ -20,7 +20,7 @@ jobs:
     needs: [prepare-release]
     strategy:
       matrix:
-        EDITION: [xfce]
+        EDITION: [gnome-vanilla]
         BRANCH: [stable]
         SCOPE: [minimal,full]
     steps:
